<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Porfolio App</string>
    <string name="mainTitleString">My NanoDegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="spotifyButtonTxt">Spotify Streamer</string>
    <string name="scoresButtonTxt">Football Scores</string>
    <string name="libraryButtonTxt">Library</string>
    <string name="buildItButtonTxt">Build It Better</string>
    <string name="xyzButtonTxt">XYZ Reader</string>
    <string name="capstoneButtonTxt">Capstone</string>
</resources>
