<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2EBF2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mainTitleString"
            android:textColor="@color/material_blue_grey_950"
            android:textSize="24sp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/spotifyButton"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#F08C35"
            android:text="@string/spotifyButtonTxt"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/scoresButton"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#F08C35"
            android:text="@string/scoresButtonTxt"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/libraryButton"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#F08C35"
            android:text="@string/libraryButtonTxt"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buildItButton"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#F08C35"
            android:text="@string/buildItButtonTxt"
            android:textSize="18sp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/xyzButton"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#F08C35"
            android:text="@string/xyzButtonTxt"
            android:textSize="18sp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/capstoneButton"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="#F08C35"
            android:text="@string/capstoneButtonTxt"
            android:textSize="18sp"
            android:textStyle="bold"

            />

    </LinearLayout>

</RelativeLayout>
